fix: history modal UI (#224)
* fix(history): decreased the horizontal padding and removed the horizontal scrollbar

* feat(history): created a custom Modal component and used it instead of the flowbite modal

* fix(history): fixed the body overflow not resetting when closing the history by clicking one of the four request options

* refactor(history): removed unused css file

* feat(modals): applied the Istex guidelines

* fix: fixed the disabled blue button style not being set

* feat: added padding to the cta-blue class

* fix(modals): stopped forcing the modals width and added padding instead

* feat(history): added the confirm delete history modal (not functional yet)

* feat(history): made the delete history button fully functional

* refactor(modals): removed unnecessary css class

* fix(history): set a max width for the formats to prevent the history from becoming too big

--- a/src/index.scss
+++ b/src/index.scss
@@ -47,6 +47,46 @@ input[type=number]::-webkit-outer-spin-button {
   @apply text-istcolor-blue border-istcolor-blue hover:text-istcolor-white hover:bg-istcolor-blue focus:text-istcolor-white focus:bg-istcolor-blue;
 }
 
+.cta-blue {
+  @apply p-2;
+
+  background-color: theme('colors.istcolor-blue');
+  color: white;
+
+  &:hover, &:focus {
+    &:not([disabled]) {
+      background: linear-gradient(to left, #51A7C5, theme('colors.istcolor-blue'));
+    }
+  }
+
+  &:disabled {
+    background-color: theme('colors.istcolor-grey.medium');
+    cursor: not-allowed;
+  }
+}
+
+.cta-red {
+  @apply p-2;
+
+  background-color: theme('colors.istcolor-red');
+  color: white;
+
+  &:hover, &:focus {
+    &:not([disabled]) {
+      background: linear-gradient(to left, #E27673, theme('colors.istcolor-red'));
+    }
+  }
+
+  &:disabled {
+    background-color: theme('colors.istcolor-grey.medium');
+    cursor: not-allowed;
+  }
+}
+
+[data-testid=table-element] {
+  overflow: hidden;
+}
+
 textarea {
   font-size: unset;
 }
